objects/Evaluation_Form_Field__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <description>The header section.</description>
        <label>Header</label>
        <picklist>
            <picklistValues>
                <fullName>Disqualifiers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Hood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents + Keys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>The order in which this should be displayed.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skippable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is a skippable field.</inlineHelpText>
        <label>Skippable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The text title for the item.</description>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Evaluation Form Field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ef1{0000}</displayFormat>
        <label>Evaluation Form Field ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>